--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "SKIP_ESLINT=true next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,4 +28,5 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
+  
 }
