--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,18 +32,21 @@ jobs:
             - name: Build Next.js app
               run: npm run build
 
-            - name: Deploy to server via SSH
-              if: github.ref == 'refs/heads/main'
-              uses: appleboy/ssh-action@v0.1.9
+            - name: Set up SSH
+              uses: webfactory/ssh-agent@v0.9.0
               with:
-                host: ${{ secrets.VPS_HOST }}
-                username: ${{ secrets.VPS_USER }}
-                key: ${{ secrets.VPS_SSH_KEY }}
-                port: ${{ secrets.SERVER_PORT }}
-                script: |
-                    cd /root/srv1097127/development/id-maker-landing-page
-                    git fetch origin main
-                    git reset --hard origin/main
-                    npm ci
-                    npm run build
-                    pm2 restart id-maker-landing-page
+                ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
+
+            - name: Deploy to server via SSH
+              run: |
+                ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+                set -e  # Exit on any error
+                cd /root/srv1097127/development/id-maker-landing-page || exit 1
+
+                git fetch origin main
+                git reset --hard origin/main
+                
+                npm ci
+                pm run build
+                pm2 restart id-maker-landing-page
+                
