--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,47 +6,46 @@ on:
       - main
 
 jobs:
-    build-and-deploy:
-        runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v3
-              with:
-                node-version: '20'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-            - name: Install dependencies
-              run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-            # - name: Run lint
-            #   run: npm run lint
+      # Disable ESLint for build
+      - name: Disable ESLint for build
+        run: echo "SKIP_ESLINT=true" >> $GITHUB_ENV
 
-            # - name: Run tests
-            #   run: npm test
-            - name: Disable ESLint for build
-              run: echo "SKIP_ESLINT=true" >> $GITHUB_ENV
+      - name: Build Next.js app
+        run: npm run build
 
-            - name: Build Next.js app
-              run: npm run build
+      # Set up SSH agent with private key
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
-            - name: Set up SSH
-              uses: webfactory/ssh-agent@v0.9.0
-              with:
-                ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
+      # Deploy via SSH
+      - name: Deploy to server via SSH
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+          set -e  # Exit on any error
 
-            - name: Deploy to server via SSH
-              run: |
-                ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-                set -e  # Exit on any error
-                cd /root/srv1097127/development/id-maker-landing-page || exit 1
+          cd /root/srv1097127/development/id-maker-landing-page || exit 1
 
-                git fetch origin main
-                git reset --hard origin/main
+          git fetch origin main
+          git reset --hard origin/main
 
-                npm ci
-                pm run build
-                /usr/bin/pm2 restart id-maker-landing-page
-                
+          npm ci
+          npm run build
+          /usr/bin/pm2 restart id-maker-landing-page
+          EOF
